# cpp-scrapper

./: .gitignore  CMakeLists.txt  HtmlElement.cpp  HtmlElement.h  HtmlParser.cpp  HtmlParser.h  jsoncpp.cpp  main.cpp  media.h  movie.cpp  movie.h  scrapper.cpp  tv_show.cpp  tv_show.h
tests/: HtmlElementTests.cpp
